--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -83,7 +83,7 @@
                                     <p class="mb-0">2019. Larga exposicion de Fotografía Urbana. Nikon D610</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-1.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-1.JPG" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -94,7 +94,7 @@
                                     <p class="mb-0">2019. Fotografía de paisaje. Nikon D610</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-2.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-2.JPG" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -105,7 +105,7 @@
                                     <p class="mb-0">2019. Fotografía Urbana. Nikon D610</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-3.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-3.JPG" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -127,7 +127,7 @@
                                     <p class="mb-0">2015. Fotografía de paisaje. Nikon D90</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-5.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-5.JPG" alt="..." />
                         </a>
                     </div>
                     <div class="col-lg-6">
@@ -138,7 +138,7 @@
                                     <p class="mb-0">2016. Fotografía de paisaje. Nikon D5200</p>
                                 </div>
                             </div>
-                            <img class="img-fluid" src="assets/img/portfolio-6.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/img/portfolio-6.JPG" alt="..." />
                         </a>
                     </div>
                 </div>
@@ -172,6 +172,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="scripts.js"></script>
+        <script src="js/scripts.js"></script>
     </body>
 </html>
